# csv_parser

./: CMakeLists.txt  README.md  Source.cpp  csv_parser.cpp  csv_parser.hpp
main/: CMakeLists.txt  csv_parser.cpp  csv_parser.hpp
test/: CMakeLists.txt  cpptest.hpp  main.cpp
test/test_csv_cases/: bad_cell_1.csv  bad_cell_2.csv  bad_csv_format.csv  bad_first_cell.csv  bad_row_number_1.csv  bad_row_number_2.csv  correct.csv  correct_2.csv
